--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -13,6 +13,7 @@ general {
     color_good      = '#88b090'
     color_degraded  = '#ccdc90'
     color_bad       = '#e89393'
+    #font pango: Inconsolata 13
     interval = 1
 }
 
@@ -28,7 +29,7 @@ order += "load"
 order += "tztime local"
 
 wireless wlan0 {
-        format_up = "W: (%quality at %essid) %ip"
+        format_up = "W: %quality %essid ‣%ip"
         format_down = ""
 }
 
