--- a/i3/config
+++ b/i3/config
@@ -1,32 +1,24 @@
 ###############################################################################
 # ceerious i3 config
 #
-# Should you change your keyboard layout somewhen, delete
-# this file and re-run i3-config-wizard(1).
-#
-# i3 config file (v4)
-#
 # Please see http://i3wm.org/docs/userguide.html for a complete reference!
 ###############################################################################
 
-# set modifier = Alt, $sup = Wind0ws key
+# modifier = Alt, $sup = Wind0ws key
 set $mod Mod1
 set $sup Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below. ISO 10646 = Unicode
-font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
-# The font above is very space-efficient, that is, it looks good, sharp and
-# clear in small sizes. However, if you need a lot of unicode glyphs or
-# right-to-left text rendering, you should instead use pango for rendering and
-# chose a FreeType font, such as:
-# font pango:DejaVu Sans Mono 10
+#font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
+font pango: Inconsolata 13
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
 # kill focused window
 bindsym $mod+Shift+q kill
+bindsym $mod+F4      kill
 
 # start dmenu (a program launcher)
 #bindsym $mod+d exec dmenu_run
@@ -58,15 +50,15 @@ bindsym $mod+Shift+Up move up
 bindsym $mod+Shift+Right move right
 
 # split horizontal/vertical
-bindsym $mod+minus split v
-bindsym $mod+backslash split h
+bindsym $mod+minus      split v
+bindsym $mod+backslash  split h
 
 # enter fullscreen mode for the focused container
 bindsym $mod+f fullscreen
 
 # change container layout (stacked, tabbed, toggle split)
 bindsym $mod+s layout stacking
-bindsym $mod+w layout tabbed
+bindsym $mod+t layout tabbed
 bindsym $mod+e layout toggle split
 bindsym $mod+$sup layout toggle split
 
@@ -141,7 +133,7 @@ mode "resize" {
         bindsym Escape mode "default"
 }
 
-# color defines for zenburn style i3
+# color defines for zenburn styled i3
 set $bg     #2c2c2e
 set $fg     #9f9f9f
 set $hi     #efef8f
@@ -179,29 +171,45 @@ bar {
 for_window [class="Ddd" instance="^(?!command_shell$)"] floating enable
 for_window [title="Event Tester"] floating enable
 for_window [class="Qalculate"] floating enable
+for_window [instance="TeamViewer.exe"] floating enable
+for_window [instance="xfce4-notifyd"] floating enable
+for_window [instance="Msgcompose"] floating enable
+
+for_window [class="URxvt" title="^[^:]+:(?<!w530:)"] border normal
+
+#scratchpads
+bindsym $mod+p scratchpad show
+
+#for_window [instance="rainlendar"] move scratchpad
+
+#exec --no-startup-id urxvt -name 'scratchpad_urxvt' -g 130x24
+#for_window [instance="scratchpad_urxvt"] move to scratchpad, border 1pixel
+#bindsym XF86Launch1 [instance="scratchpad_urxvt"] scratchpad show, move position 110px 0px
 
 # My favorite programs
+bindsym $sup+b exec --no-startup-id "~/develop/scripts/start-vbox.sh"
+bindsym $sup+c exec qalculate
+bindsym $sup+e exec thunderbird
+bindsym $sup+f exec thunar
+bindsym $sup+g exec gimp
+bindsym $sup+h exec rainlendar
+bindsym $sup+i exec inkscape
+bindsym $sup+k exec wireshark
+bindsym $sup+l exec xflock4
+bindsym $sup+q exec qtcreator
+bindsym $sup+r exec ranger
+bindsym $sup+s exec sunflower
+bindsym $sup+t exec --no-startup-id "~/develop/scripts/start-teamviewer.sh"
+bindsym $sup+v exec vlc
+bindsym $sup+w exec chromium
+bindsym $sup+x exec keepassx
+bindsym $sup+z exec filezilla
+#specialkeys
 bindsym $mod+Return exec urxvt #i3-sensible-terminal
-bindsym $sup+c      exec qalculate
-bindsym $sup+w      exec chromium
-bindsym $sup+e      exec thunderbird
-bindsym $sup+i      exec inkscape
-bindsym $sup+g      exec gimp
-bindsym $sup+v      exec vlc
-bindsym $sup+x      exec keepassx
-bindsym $sup+z      exec filezilla
-bindsym $sup+b      exec bash -c ~/develop/scripts/start-vbox.sh
-bindsym $sup+l      exec xflock4
-bindsym $sup+q      exec qtcreator
 bindsym XF86ScreenSaver exec xflock4
 #bindsym XF86Launch1     exec xfce4-terminal --drop-down
 
 # always open some programs on specified workspace
-assign [class="Chromium"] 2 wǝb
+assign [class="Chromium"]    2 wǝb
 assign [class="Thunderbird"] 3 m@il
-assign [class="VirtualBox"] 10 v!rt
-
-# scratchpad
-exec --no-startup-id urxvt -name 'scratchpad_urxvt' -g 130x24
-for_window [instance="scratchpad_urxvt"] move to scratchpad, border 1pixel
-bindsym XF86Launch1 [instance="scratchpad_urxvt"] scratchpad show, move position 110px 0px
+assign [class="VirtualBox"]  10 v!rt
