--- a/i3/config
+++ b/i3/config
@@ -104,16 +104,16 @@ bindsym $sup+Left  workspace prev
 bindsym $sup+Up    workspace back_and_forth
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to $w1
-bindsym $mod+Shift+2 move container to $w2
-bindsym $mod+Shift+3 move container to $w3
-bindsym $mod+Shift+4 move container to $w4
-bindsym $mod+Shift+5 move container to $w5
-bindsym $mod+Shift+6 move container to $w6
-bindsym $mod+Shift+7 move container to $w7
-bindsym $mod+Shift+8 move container to $w8
-bindsym $mod+Shift+9 move container to $w9
-bindsym $mod+Shift+0 move container to $w10
+bindsym $mod+Shift+1 move container to workspace $w1
+bindsym $mod+Shift+2 move container to workspace $w2
+bindsym $mod+Shift+3 move container to workspace $w3
+bindsym $mod+Shift+4 move container to workspace $w4
+bindsym $mod+Shift+5 move container to workspace $w5
+bindsym $mod+Shift+6 move container to workspace $w6
+bindsym $mod+Shift+7 move container to workspace $w7
+bindsym $mod+Shift+8 move container to workspace $w8
+bindsym $mod+Shift+9 move container to workspace $w9
+bindsym $mod+Shift+0 move container to workspace $w10
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
