--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -19,6 +19,7 @@ general {
 
 order += "volume master"
 order += "disk /"
+order += "disk /home"
 #order += "run_watch DHCP"
 #order += "ipv6"
 #order += "run_watch VPN"
@@ -29,13 +30,13 @@ order += "load"
 order += "tztime local"
 
 wireless wlan0 {
-        format_up = "W: %quality %essid ‣%ip"
+        format_up = "%essid %ip ‣ %quality"
         format_down = ""
 }
 
 ethernet eth0 {
         # if you use %speed, i3status requires root privileges
-        format_up = "E: %ip (%speed)"
+        format_up = "%ip (%speed)"
         format_down = ""
 }
 
@@ -60,6 +61,10 @@ load {
 }
 
 disk "/" {
+        format = "%free"
+}
+
+disk "/home" {
         format = "%free"
 }
 
