--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -26,50 +26,61 @@ order += "disk /home"
 order += "wireless wlan0"
 order += "ethernet eth0"
 order += "battery 0"
+order += "cpu_temperature 0"
+order += "cpu_usage 0"
 order += "load"
 order += "tztime local"
 
 wireless wlan0 {
-        format_up = "%essid %ip ‣ %quality"
-        format_down = ""
+    format_up = "%essid %ip ‣ %quality"
+    format_down = ""
 }
 
 ethernet eth0 {
-        # if you use %speed, i3status requires root privileges
-        format_up = "%ip (%speed)"
-        format_down = ""
+    # if you use %speed, i3status requires root privileges
+    format_up = "%ip (%speed)"
+    format_down = ""
 }
 
 battery 0 {
-        format = "%status %percentage %remaining"
+    format = "⚡ %status %percentage %remaining"
+    last_full_capacity = true
 }
 
 run_watch DHCP {
-        pidfile = "/var/run/dhclient*.pid"
+    pidfile = "/var/run/dhclient*.pid"
 }
 
 run_watch VPN {
-        pidfile = "/var/run/vpnc/pid"
+    pidfile = "/var/run/vpnc/pid"
 }
 
 tztime local {
-        format = "%Y-%m-%d %H:%M:%S"
+    format = "%A %e.%B ⌚ %H:%M:%S"
 }
 
 load {
-        format = "%1min"
+    format = "☢ %1min"
+}
+
+cpu_usage {
+        format = "↺ %usage "
+}
+
+cpu_temperature 0 {
+        format = "⌘ %degrees°C "
 }
 
 disk "/" {
-        format = "%free"
+    format = "√ %free"
 }
 
 disk "/home" {
-        format = "%free"
+    format = "⌂ %free"
 }
 
 volume master {
-    format = "♪ %volume"
+    format = "☊ %volume"
     device = "default"
     mixer = "Master"
     mixer_idx = 0
