--- a/i3/config
+++ b/i3/config
@@ -15,7 +15,7 @@ set $psst --no-startup-id
 bindsym $mod+b border toggle
 
 # autostart
-exec $psst feh --bg-scale ~/img/soly1.jpg
+exec $psst feh --bg-scale ~/img/soly.jpg
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below. ISO 10646 = Unicode
@@ -154,6 +154,24 @@ mode "resize" {
         bindsym Escape mode "default"
 }
 
+##
+# system
+##
+set $mode_system (l) lock, (e) logout, (s) suspend, (h) hibernate, (r) reboot, (Shift+s) shutdown
+bindsym $mod+Delete mode "$mode_system"
+mode "$mode_system" {
+    bindsym l exec $psst i3lock -c 000000, mode "default"
+    bindsym e exec $psst i3-msg exit logout, mode "default"
+    bindsym s exec $psst i3-msg suspend, mode "default"
+    bindsym h exec $psst i3-msg hibernate, mode "default"
+    bindsym r exec $psst i3-msg reboot, mode "default"
+    bindsym Shift+s exec $psst i3exit shutdown, mode "default"  
+
+    # back to normal: Enter or Escape
+    bindsym Return mode "default"
+    bindsym Escape mode "default"
+}
+
 # show CapsLock state in statusbar
 bindsym Caps_Lock mode "caps"
 bindsym Shift+Caps_Lock mode "caps"
@@ -182,6 +200,8 @@ client.urgent               $rd        $rd         $tx
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
+	position bottom
+
     status_command i3status --config ~/.i3/i3status.conf
 
     colors {
@@ -205,7 +225,7 @@ for_window [instance="Msgcompose"] floating enable
 for_window [class="Audacious"] floating enable, border none
 for_window [instance="pcalc.exe"] floating enabled
 for_window [class="^(?i)chromium$"] border none
-for_window [class="Thunderbird"] border none
+for_window [class="Thunderbird" instance="Mail"] border none
 # return to normal border (after ssh session)
 for_window [class="URxvt" title="^can@w530"] border normal
 
@@ -240,6 +260,8 @@ bindsym XF86ScreenSaver exec xflock4
 bindsym XF86AudioPlay exec audacious -t
 bindsym XF86AudioNext exec audacious -fp
 bindsym XF86AudioPrev exec audacious -rp
+bindsym XF86MonBrightnessDown exec xbacklight -dec 10%
+bindsym XF86MonBrightnessUp exec xbacklight -inc 10%
 
 bindsym $mod+Tab exec simpleswitcher -i3 -now -font "Inconsolata-10" -fg "#9f9f9f" -bg "#2c2c2e" -hlfg "#2c2c2e" -hlbg "#ccdc90" -o 85
 
