--- a/i3/config
+++ b/i3/config
@@ -231,7 +231,7 @@ bindsym $sup+k exec wireshark
 bindsym $sup+l exec xflock4
 bindsym $sup+m exec mixxx
 bindsym $sup+p exec "xrandr --output HDMI1 --auto && xrandr --output LVDS1 --off"
-bindsym $sup+Shift+p exec "xrandr --output LVDS1 --auto"
+bindsym $sup+Shift+p exec "xrandr --output LVDS1 --auto && xrandr --output HDMI1 --off"
 bindsym $sup+q exec qtcreator
 bindsym $sup+r exec urxvt -e ranger --selectfile=`xcwd`
 bindsym $sup+s exec synapse
