XE700 uses BAT1

--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -25,7 +25,7 @@ order += "disk /home"
 #order += "run_watch VPN"
 order += "wireless wlan0"
 order += "ethernet eth0"
-order += "battery 0"
+order += "battery 1"
 order += "cpu_temperature 0"
 order += "cpu_usage 0"
 order += "load"
@@ -42,9 +42,10 @@ ethernet eth0 {
     format_down = ""
 }
 
-battery 0 {
+battery 1 {
     format = "⚡ %status %percentage %remaining"
     last_full_capacity = true
+    integer_battery_capacity = true
 }
 
 run_watch DHCP {
