--- a/i3/config
+++ b/i3/config
@@ -18,7 +18,7 @@ set refresh && killall -SIGUSR1 i3status
 bindsym $mod+b border toggle
 
 # autostart
-exec $psst feh --bg-scale ~/img/soly1.jpg
+exec $psst feh --bg-scale ~/Pictures/sun.jpg
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below. ISO 10646 = Unicode
