cleaned up config and added various improvements

--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -19,7 +19,7 @@ general {
 
 order += "volume master"
 order += "disk /"
-order += "disk /home"
+order += "disk /media/cee/sd64"
 #order += "run_watch DHCP"
 #order += "ipv6"
 #order += "run_watch VPN"
@@ -65,19 +65,19 @@ load {
 }
 
 cpu_usage {
-        format = "↺ %usage "
+    format = "↺ %usage "
 }
 
 cpu_temperature 0 {
-        format = "⌘ %degrees°C "
+    format = "⌘ %degrees°C "
 }
 
 disk "/" {
     format = "√ %free"
 }
 
-disk "/home" {
-    format = "⌂ %free"
+disk "/media/cee/sd64" {
+    format = "🃟 %free"
 }
 
 volume master {
