--- a/i3/config
+++ b/i3/config
@@ -19,6 +19,8 @@ bindsym $mod+b border toggle
 
 # autostart
 exec $psst feh --bg-scale ~/Pictures/sun.jpg
+# load ssh keys
+exec $psst ssh-add ~/.ssh/xe700
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below. ISO 10646 = Unicode
@@ -29,61 +31,62 @@ font pango: Inconsolata 10
 floating_modifier $mod
 
 # kill focused window
-bindsym $mod+Shift+q kill
-bindsym $mod+F4      kill
+bindsym $mod+Shift+q        kill
+bindsym $mod+F4             kill
 
 # start dmenu (a program launcher)
-#bindsym $mod+d exec dmenu_run
+bindsym $mod+d exec dmenu_run
 # only show programs with a .desktop
-bindsym $mod+d exec $psst i3-dmenu-desktop
+#bindsym $mod+d exec $psst i3-dmenu-desktop
 
 # change focus (vim style)
-bindsym $mod+h focus left
-bindsym $mod+j focus down
-bindsym $mod+k focus up
-bindsym $mod+l focus right
+bindsym $mod+h              focus left
+bindsym $mod+j              focus down
+bindsym $mod+k              focus up
+bindsym $mod+l              focus right
 
 # alternatively, you can use the cursor keys:
-bindsym $mod+Left focus left
-bindsym $mod+Down focus down
-bindsym $mod+Up focus up
-bindsym $mod+Right focus right
+bindsym $mod+Left           focus left
+bindsym $mod+Down           focus down
+bindsym $mod+Up             focus up
+bindsym $mod+Right          focus right
 
 # move focused window
-bindsym $mod+Shift+h move left
-bindsym $mod+Shift+j move down
-bindsym $mod+Shift+k move up
-bindsym $mod+Shift+l move right
+bindsym $mod+Shift+h        move left
+bindsym $mod+Shift+j        move down
+bindsym $mod+Shift+k        move up
+bindsym $mod+Shift+l        move right
 
 # alternatively, you can use the cursor keys:
-bindsym $mod+Shift+Left move left
-bindsym $mod+Shift+Down move down
-bindsym $mod+Shift+Up move up
-bindsym $mod+Shift+Right move right
+bindsym $mod+Shift+Left     move left
+bindsym $mod+Shift+Down     move down
+bindsym $mod+Shift+Up       move up
+bindsym $mod+Shift+Right    move right
 
 # split horizontal/vertical
-bindsym $mod+minus      split v
-bindsym $mod+backslash  split h
+bindsym $mod+minus          split v
+bindsym $mod+backslash      split h
+bindsym $mod+Shift+minus    split h
 
 # enter fullscreen mode for the focused container
-bindsym $mod+f fullscreen
+bindsym $mod+f              fullscreen
 
 # change container layout (stacked, tabbed, toggle split)
-bindsym $mod+s layout stacking
-bindsym $mod+t layout tabbed
-bindsym $mod+e layout toggle split
+bindsym $mod+s              layout stacking
+bindsym $mod+t              layout tabbed
+bindsym $mod+e              layout toggle split
 
 # toggle tiling / floating
-bindsym $mod+Shift+space floating toggle
+bindsym $mod+Shift+space    floating toggle
 
 # change focus between tiling / floating windows
-bindsym $mod+space focus mode_toggle
+bindsym $mod+space          focus mode_toggle
 
 # focus the parent container
-bindsym $mod+a focus parent
+bindsym $mod+a              focus parent
 
 # focus the child container
-bindsym $mod+c focus child
+bindsym $mod+c              focus child
 
 # workspace defines
 set $w1 1ϲεε
@@ -160,8 +163,13 @@ mode "resize" {
 # show CapsLock state in statusbar
 bindsym Caps_Lock mode "caps"
 bindsym Shift+Caps_Lock mode "caps"
+bindsym Control+Caps_Lock mode "caps"
+bindsym $mod+Caps_Lock mode "caps"
 mode "caps" {
         bindsym Caps_Lock mode "default"
+        bindsym Shift+Caps_Lock mode "default"
+        bindsym Control+Caps_Lock mode "default"
+        bindsym $mod+Caps_Lock mode "default"
 }
 
 # color defines for zenburn styled i3
@@ -185,6 +193,7 @@ client.urgent               $rd        $rd         $tx
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
+    position top
     status_command i3status --config ~/.i3/i3status.conf
 
     colors {
@@ -198,50 +207,41 @@ bar {
     }
 }
 
-# enable floating mode for some applications
-for_window [class="Ddd" instance="^(?!command_shell$)"] floating enable
-for_window [title="Event Tester"] floating enable   # xev
-for_window [class="Qalculate"] floating enable
-for_window [instance="TeamViewer.exe"] floating enable
-for_window [instance="xfce4-notifyd"] floating enable, border none
-for_window [instance="Msgcompose"] floating enable
-for_window [class="Audacious"] floating enable, border none
-for_window [instance="pcalc.exe"] floating enabled
-for_window [class="^(?i)chromium"] border none
-for_window [class="Thunderbird"] border none
-for_window [class="Synapse"] border none
-# return to normal border (after ssh session)
-for_window [class="URxvt" title="^can@w530"] border normal
-
 #scratchpads
-bindsym $mod+Shift+Super_L move scratchpad
-bindsym $mod+Super_L scratchpad show
-for_window [instance="rainlendar"] move scratchpad
+bindsym $mod+Shift+Super_L          move scratchpad
+bindsym $mod+Super_L                scratchpad show
+for_window [instance="rainlendar"]  move scratchpad
 
 # My favorite programs
-bindsym $sup+a exec audacious
+bindsym $sup+a exec /usr/bin/atom
 bindsym $sup+b exec $psst ~/develop/scripts/start-vbox.sh
 bindsym $sup+c exec wine "C:\\Program Files\\AnalogX\\PCalc\\pcalc.exe"   
-bindsym $sup+e exec evolution
+#bindsym $sup+d
+bindsym $sup+e exec thunderbird
 bindsym $sup+f exec thunar
 bindsym $sup+g exec gimp
 bindsym $sup+h exec rainlendar
 bindsym $sup+i exec inkscape
-bindsym $sup+k exec wireshark
+#bindsym $sup+j
+bindsym $sup+k exec xkill
 bindsym $sup+l exec xflock4
 bindsym $sup+m exec mixxx
+#bindsym $sup+n
+#bindsym $sup+o
 bindsym $sup+p exec "xrandr --output HDMI1 --auto && xrandr --output LVDS1 --off"
 bindsym $sup+Shift+p exec "xrandr --output LVDS1 --auto && xrandr --output HDMI1 --off"
-bindsym $sup+q exec qtcreator
+bindsym $sup+q exec /opt/qt53/Tools/QtCreator/bin/qtcreator
 bindsym $sup+r exec urxvt -e ranger --selectfile=`xcwd`
 bindsym $sup+s exec synapse
 bindsym $sup+t exec $psst ~/develop/scripts/start-teamviewer.sh
+#bindsym $sup+u
 bindsym $sup+v exec vlc
 bindsym $sup+w exec chromium-browser
 bindsym $sup+x exec keepassx
+bindsym $sup+y exec wireshark
 bindsym $sup+z exec filezilla
-bindsym $mod+Return exec urxvt
-bindsym $mod+Shift+Return "exec xcwd | xargs urxvt -cd"
+bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Shift+Return "exec xcwd | xargs i3-sensible-terminal -cd"
 bindsym XF86ScreenSaver exec xflock4
 
 bindsym XF86AudioPlay exec audacious -t
@@ -261,10 +261,27 @@ bindsym Control+F3 exec xbacklight +10%
 bindsym $mod+Tab exec simpleswitcher -i3 -now -font "Inconsolata-10" -fg "#9f9f9f" -bg "#2c2c2e" -hlfg "#2c2c2e" -hlbg "#ccdc90" -o 85
 
 # always open some programs on specified workspace
-assign [class="Chromium"]    $w2
-assign [class="Thunderbird"] $w3
-assign [class="Audacious"]   $w9
-assign [class="VirtualBox"]  $w0
+assign [class="Chromium"]       $w2
+assign [class="Thunderbird"]    $w3
+assign [class="QtCreator"]      $w4
+assign [class="Audacious"]      $w9
+assign [class="VirtualBox"]     $w0
+
+# enable floating mode for some applications
+for_window [class="Ddd" instance="^(?!command_shell$)"] floating enable
+for_window [title="Event Tester"]                       floating enable   # xev
+for_window [class="Qalculate"]                          floating enable
+for_window [instance="TeamViewer.exe"]                  floating enable
+for_window [instance="xfce4-notifyd"]                   floating enable, border none
+for_window [instance="Msgcompose"]                      floating enable
+for_window [class="Audacious"]                          floating enable, border none
+for_window [instance="pcalc.exe"]                       floating enabled
+for_window [class="^(?i)chromium"]                      border none
+for_window [class="Thunderbird"]                        border none
+for_window [class="Synapse"]                            border none
+for_window [class="QtCreator"]                          border none
+# return to normal border (after ssh session)
+for_window [class="URxvt" title="^cee@"]                border normal
 
 #exec $psst urxvt -g 125x12+120 -name "quake_urxvt"
 #for_window [instance="quake_urxvt"] floating enable, move to scratchpad, border 1pixel
