removed dropdown terminal because of problems but fixed some minor annoyances

--- a/etc/locale.conf
+++ b/etc/locale.conf
@@ -7,8 +7,8 @@ LANG="en_IE.UTF-8"
 # define fallback languages
 LANGUAGE="en_IE:en_US:en"
 
-LC_CTYPE="C"
-LC_NUMERIC="C"
+LC_CTYPE="en_IE.UTF-8"
+LC_NUMERIC="en_IE.UTF-8"
 LC_TIME="de_CH.UTF-8"
 
 # Keep the default sort order (e.g. files starting with a '.'
