--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -13,7 +13,6 @@ general {
     color_good      = '#88b090'
     color_degraded  = '#ccdc90'
     color_bad       = '#e89393'
-    #font pango: Inconsolata 13
     interval = 1
 }
 
@@ -81,6 +80,7 @@ disk "/home" {
 
 volume master {
     format = "☊ %volume"
+    format_muted = "☊ MUTE"
     device = "default"
     mixer = "Master"
     mixer_idx = 0
