--- a/i3/config
+++ b/i3/config
@@ -20,7 +20,9 @@ exec $psst feh --bg-scale ~/img/soly.jpg
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below. ISO 10646 = Unicode
 #font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
-font pango: Inconsolata 10
+#font pango: Inconsolata 10
+#font pango:DejaVu Sans Mono 8
+font pango:Droid Sans, FontAwesome 9
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -83,8 +85,8 @@ bindsym $mod+a focus parent
 bindsym $mod+c focus child
 
 # workspace defines
-set $w1 1ϲεε
-set $w2 2✆
+set $w1 1©
+set $w2 2⚓
 set $w3 3✉
 set $w4 4☘
 set $w5 5☦
@@ -160,7 +162,7 @@ mode "resize" {
 set $mode_system (l) lock, (e) logout, (s) suspend, (h) hibernate, (r) reboot, (Shift+s) shutdown
 bindsym $mod+Delete mode "$mode_system"
 mode "$mode_system" {
-	bindsym l exec $psst ~/.i3/i3exit.sh lock, mode "default"
+    bindsym l exec $psst ~/.i3/i3exit.sh lock, mode "default"
     bindsym e exec $psst ~/.i3/i3exit.sh logout, mode "default"
     bindsym s exec $psst ~/.i3/i3exit.sh suspend, mode "default"
     bindsym h exec $psst ~/.i3/i3exit.sh hibernate, mode "default"
@@ -175,8 +177,13 @@ mode "$mode_system" {
 # show CapsLock state in statusbar
 bindsym Caps_Lock mode "caps"
 bindsym Shift+Caps_Lock mode "caps"
+bindsym Ctrl+Caps_Lock mode "caps"
+bindsym $mod+Caps_Lock mode "caps"
 mode "caps" {
         bindsym Caps_Lock mode "default"
+        bindsym Shift+Caps_Lock mode "default"
+        bindsym Ctrl+Caps_Lock mode "default"
+        bindsym $mod+Caps_Lock mode "default"
 }
 
 # color defines for zenburn styled i3
@@ -200,7 +207,8 @@ client.urgent               $rd        $rd         $tx
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-	position bottom
+    font pango:Droid Sans, FontAwesome 11
+    position top
 
     status_command i3status --config ~/.i3/i3status.conf
 
@@ -240,7 +248,7 @@ for_window [instance="rainlendar"] move scratchpad
 # My favorite programs
 bindsym $sup+a exec audacious
 bindsym $sup+b "exec ~/develop/scripts/vbox-start.sh"
-bindsym $sup+c exec wine "C:\\Program Files\\AnalogX\\PCalc\\pcalc.exe"   
+bindsym $sup+c exec wine "C:\\Program Files\\AnalogX\\PCalc\\pcalc.exe"
 bindsym $sup+e exec thunderbird
 bindsym $sup+f exec thunar
 bindsym $sup+g exec gimp
@@ -266,6 +274,8 @@ bindsym XF86ScreenSaver exec xflock4
 bindsym XF86AudioPlay exec audacious -t
 bindsym XF86AudioNext exec audacious -fp
 bindsym XF86AudioPrev exec audacious -rp
+bindsym XF86AudioLowerVolume exec amixer set Master playback 1-
+bindsym XF86AudioRaiseVolume exec amixer set Master playback 1+
 bindsym XF86MonBrightnessDown exec xbacklight -dec 5%
 bindsym XF86MonBrightnessUp exec xbacklight -inc 5%
 
@@ -276,13 +286,3 @@ assign [class="Chromium"]    $w2
 assign [class="Thunderbird"] $w3
 assign [class="Audacious"]   $w9
 assign [class="VirtualBox"]  $w0
-
-#exec $psst urxvt -g 125x12+120 -name "quake_urxvt"
-#for_window [instance="quake_urxvt"] floating enable, move to scratchpad, border 1pixel
-#bindsym XF86Launch1 [instance="quake_urxvt"] scratchpad show, move position 150px 0px
-
-# quake style terminal
-exec $psst urxvt -name "quake_urxvt"
-for_window [instance="quake_urxvt"] floating enable, border none;
-for_window [instance="quake_urxvt"] move scratchpad; [instance="quake_urxvt"] scratchpad show; move position 0px 0px; resize grow height 400px; resize grow width 683px; move scratchpad
-bindsym XF86Launch1 [instance="quake_urxvt"] scratchpad show
