--- a/i3/i3status.conf
+++ b/i3/i3status.conf
@@ -22,20 +22,20 @@ order += "disk /home"
 #order += "run_watch DHCP"
 #order += "ipv6"
 #order += "run_watch VPN"
-order += "wireless wlan0"
-order += "ethernet eth0"
+order += "wireless wlp3s0"
+order += "ethernet enp0s25"
 order += "battery 0"
 order += "cpu_temperature 0"
 order += "cpu_usage 0"
 order += "load"
 order += "tztime local"
 
-wireless wlan0 {
+wireless wlp3s0 {
     format_up = "%essid %ip ‣ %quality"
     format_down = ""
 }
 
-ethernet eth0 {
+ethernet enp0s25 {
     # if you use %speed, i3status requires root privileges
     format_up = "%ip (%speed)"
     format_down = ""
