--- a/git/.gitconfig
+++ b/git/.gitconfig
@@ -3,3 +3,7 @@
 	name = Cyril Andreatta
 [push]
 	default = simple
+[core]
+	excludesfile = ~/.gitignore
+[gui]
+	recentrepo = /home/can/src/qt/ferag-simulator-2014
