--- a/i3/config
+++ b/i3/config
@@ -22,7 +22,7 @@ new_float   normal 3 px
 exec $psst nm-applet
 exec $psst urxvtd -q -o -f
 exec $psst urxvtc
-exec xbacklight = 60
+#exec xbacklight = 60
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below. ISO 10646 = Unicode
@@ -266,6 +266,7 @@ for_window [class="Thunderbird" instance="Mail"] border none
 for_window [class="^(?i)chromium"] border none
 for_window [class="Thunderbird"] border none
 for_window [class="Synapse"] border none
+#for_window [class="rdesktop"] fullscreen
 # return to normal border (after ssh session)
 for_window [class="URxvt" title="^can@w530"] border normal
 
@@ -286,11 +287,11 @@ bindsym $sup+i exec inkscape
 bindsym $sup+k exec wireshark
 bindsym $sup+l exec libreoffice
 bindsym $sup+m exec mixxx
-bindsym $sup+p exec "xrandr --output HDMI1 --auto && xrandr --output LVDS1 --off"
-bindsym $sup+Shift+p exec "xrandr --output LVDS1 --auto"
+#bindsym $sup+p exec "xrandr --output HDMI1 --auto && xrandr --output LVDS1 --off"
+#bindsym $sup+Shift+p exec "xrandr --output LVDS1 --auto"
 bindsym $sup+q exec qtcreator
 bindsym $sup+r exec urxvtc -e ranger --selectfile=`xcwd`
-bindsym $sup+s exec synapse
+bindsym $sup+s exec "rofi -snow -terminal urxvtc"
 bindsym $sup+t exec $psst ~/develop/scripts/start-teamviewer.sh
 bindsym $sup+u exec $psst optirun uzbl-browser
 bindsym $sup+v exec vlc
@@ -302,6 +303,9 @@ bindsym $mod+Return exec urxvtc
 bindsym $mod+Shift+Return exec urxvtc --chdir `xcwd`
 #bindsym $mod+Shift+Return exec urxvtc --chdir ${PWD}
 
+# remote desktop
+bindsym $sup+F5 exec "rdesktop -f -g 1920x1080 -P -z -x l -r sound:off -u 'GRAPH-TECH\can' gt-server5:3389"
+
 # Specialkeys
 bindsym XF86ScreenSaver         exec $psst ~/.i3/i3exit.sh lock
 bindsym XF86AudioPlay           exec audacious -t
@@ -311,9 +315,10 @@ bindsym XF86AudioLowerVolume    exec amixer set Master playback 1-
 bindsym XF86AudioRaiseVolume    exec amixer set Master playback 1+
 bindsym XF86MonBrightnessDown   exec xbacklight -dec 5%
 bindsym XF86MonBrightnessUp     exec xbacklight -inc 5%
-#bindsym XF86Launch1             exec $psst urxvtc
+bindsym XF86Launch1             exec $psst urxvtc
 
-#bindsym $mod+Tab exec simpleswitcher -i3 -now -font "Inconsolata-10" -fg "#9f9f9f" -bg "#2c2c2e" -hlfg "#2c2c2e" -hlbg "#ccdc90" -o 85
+# list open windows to switch to
+bindsym $mod+Tab exec rofi -i3 -now -font "Inconsolata-10" -fg "#9f9f9f" -bg "#2c2c2e" -hlfg "#2c2c2e" -hlbg "#ccdc90" -o 85
 
 # always open some programs on specified workspace
 assign [class="Chromium"]    $w2
