New ignore rules for latex.

--- a/git/.gitignore
+++ b/git/.gitignore
@@ -37,3 +37,11 @@ ui_*.h
 Makefile*
 *-build-*
 *.autosave
+
+# latex
+###########################################
+*.aux
+*.bbl
+*.blg
+*.dvi
+*.synctex.gz
